# ActiveBreach-Engine

./: .gitmodules  E900U.yar  LICENSE  README.md  TECH.md  USAGE.md
C/: C.sln
C++/: C++.sln  C++.vcxproj
C++/Include/: ActiveBreach.cpp  ActiveBreach.hpp
Rust/: Cargo.toml  cargo.toml
Rust/.cargo/: config.toml
Rust/src/: lib.rs
Rust/src/internal/: diagnostics.rs  dispatch.rs  exports.rs  mapper.rs  mod.rs  sidewinder.rs  stack.rs  stub.rs  thread.rs
Rust/src/internal/crypto/: encrypted.rs  lea.rs  mod.rs
Rust/tests/: Cargo.toml
Rust/tests/src/: main.rs
SDK/C/: C.vcxproj
SDK/C++/: C++.vcxproj.filters  LICENSE
SDK/C++/C++ Tests/: Main.cpp
SDK/C++/Include/: ActiveBreach.hpp
SDK/C/C Tests/: Main.cpp
SDK/Rust/: Cargo.toml  build.rs
SDK/Rust/.cargo/: config.toml
SDK/Rust/src/: lib.rs
SDK/Rust/src/internal/: antibreach.rs  diagnostics.rs  dispatch.rs  entropy.rs  exports.rs  mapper.rs  mod.rs  stack.rs  stub.rs  stub_template.rs  thread.rs  vm.rs
SDK/Rust/src/internal/crypto/: aes_ctr.rs  lea.rs  mod.rs
SDK/Rust/tests/: Cargo.toml  activebreach_harness.rs  long_sleep_cycle.rs
