[package]
name = "activebreach"
version = "0.1.0"
edition = "2021"
license = "“Commons Clause” License Condition v1.0 | Apache License"
repository = "https://github.com/DutchPsycho/ActiveBreach-Engine"
description = "Syscall abstraction layer via dynamic syscall proxying with dispatcher coordination"
readme = "README.md"
keywords = ["syscall", "proxy", "ntdll", "EDR", "ActiveBreach"]
categories = ["os::windows-apis", "no-std"]
exclude = ["test/*", "target/*", ".vscode", "*.dll", "*.lib"]

[dependencies]
once_cell = "1.21.1"
rustc-hash = "2.1.1"

windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
] }

[lib]
name = "activebreach"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
strip = true