[package]
name = "activebreach_harness"
version = "0.1.0"
edition = "2021"
license = "“Commons Clause” License Condition v1.0 | Apache License"
description = "Test harness for ActiveBreach-Engine"

[dependencies]
activebreach = { path = "../" }
winapi = { version = "0.3.9", features = [
    "handleapi",
    "libloaderapi",
    "minwindef",
    "processthreadsapi",
    "synchapi",
    "winbase",
    "ntdef",
    "winnt",
] }